# rustypaste

./: .dockerignore  .editorconfig  .env  .gitignore  .lycheeignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  cliff.toml  codecov.yml  config.toml  config_html.toml  docker-compose.yml  empty.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  cd.yml  ci.yml  docker.yml  shuttle.yml
examples/: html_form.toml  landing_page.html
extra/OpenRC/: rustypaste.initd
extra/systemd/: rustypaste.env  rustypaste.service  rustypaste.sysusers  rustypaste.tmpfiles
extra/systemd257+/: rustypaste.sysusers
fixtures/: .env  README.md  test-fixtures.sh
fixtures/test-duplicate-file-upload/: config.toml  test.sh
fixtures/test-expiring-file-upload/: test.sh
fixtures/test-file-delete/: config.toml  test.sh
fixtures/test-file-upload/: config.toml  test.sh
fixtures/test-file-upload-override-filename/: config.toml  test.sh
fixtures/test-file-upload-random-noext/: config.toml  test.sh
fixtures/test-file-upload-same-filename/: test.sh
fixtures/test-filename-replace/: config.toml  test.sh
fixtures/test-list-files/: config.toml  test.sh
fixtures/test-list-files-not-exposed/: config.toml  test.sh
fixtures/test-multiple-files-upload-not-found/: config.toml  test.sh
fixtures/test-oneshot-upload/: test.sh
fixtures/test-oneshot-url/: test.sh
fixtures/test-path-traversal/: config.toml  test.sh
fixtures/test-protected-file-delete/: test.sh
fixtures/test-protected-file-duplicate/: test.sh
fixtures/test-protected-file-upload/: test.sh
fixtures/test-random-suffix/: config.toml  test.sh
fixtures/test-random-url/: config.toml  test.sh
fixtures/test-remote-file-upload/: config.toml  test.sh
fixtures/test-remote-file-upload-override-filename/: test.sh
fixtures/test-server-auth/: config.toml  test.sh
fixtures/test-server-auth-multiple-tokens/: config.toml  test.sh
fixtures/test-server-auth-token-file/: auth_file  test.sh
fixtures/test-server-auth-tokens-unset/: config.toml
fixtures/test-server-auto-deletion/: config.toml  test.sh
fixtures/test-server-default-extension/: config.toml  test.sh
fixtures/test-server-delete-token-file/: test.sh
fixtures/test-server-delete-tokens-unset/: test.sh
fixtures/test-server-landing-page/: config.toml  test.sh
fixtures/test-server-landing-page-file/: config.toml  test.sh
fixtures/test-server-mime-blacklist/: config.toml  test.sh
fixtures/test-server-mime-override/: config.toml  test.sh
fixtures/test-server-payload-limit/: config.toml  test.sh
fixtures/test-server-upload-dir-limit/: config.toml  test.sh
fixtures/test-url-encode/: config.toml  test.sh
fixtures/test-url-encoding/: config.toml  test.sh
fixtures/test-url-upload/: config.toml  test.sh
fixtures/test-url-upload-override-filename/: test.sh
fixtures/test-version-not-exposed/: config.toml  test.sh
img/: README.md
shuttle/: config.toml
src/: auth.rs  config.rs  file.rs  header.rs  lib.rs  main.rs  middleware.rs  mime.rs  password.rs  paste.rs  random.rs  server.rs  util.rs
